# breeze-agent

./: pyproject.toml
src/web_research_graph/: __init__.py  configuration.py  graph.py  prompts.py  state.py  tools.py  utils.py
src/web_research_graph/interviews_graph/: __init__.py  graph.py  router.py
src/web_research_graph/interviews_graph/answers_graph/: __init__.py  graph.py
src/web_research_graph/interviews_graph/answers_graph/nodes/: __init__.py  generate.py  search.py
src/web_research_graph/interviews_graph/nodes/: __init__.py  initialize.py  next_editor.py  question.py
src/web_research_graph/nodes/: __init__.py  article_generator.py  outline_generator.py  outline_refiner.py  perspectives_generator.py  topic_expander.py  topic_input.py  topic_validator.py
