[project]
name = "web-research-graph"
version = "0.0.6"
description = "A LangGraph-based workflow for conducting web research and generating structured content."
authors = [
    { name = "Andres Torres", email = "torres.andres87@gmail.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "duckduckgo-search",
    "langchain>=0.3.19",
    "langchain-openai>=0.3.7",
    "langchain-groq>=0.2.4",
    "langchain-anthropic>=0.3.8",
    "langchain-ollama>=0.2.3",
    "langchain-community>=0.3.18",
    "langgraph>=0.3.1",
    "python-dotenv>=1.0.1",
    "wikipedia>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11.1",
    "ruff>=0.6.1",
    "pytest>=6.2.4",
]

[build-system]
requires = [
    "setuptools>=73.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"